<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_username"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/image_username"
            android:src="@drawable/baseline_account_circle_24"
            android:layout_marginTop="32dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/may_green" />

        <TextView
            android:id="@+id/tv_username"
            style="@style/Text.Medium"
            android:layout_width="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/img_username"
            app:layout_constraintStart_toEndOf="@+id/img_username"
            app:layout_constraintTop_toTopOf="@+id/img_username"
            tools:text="Username" />

        <TextView
            android:id="@+id/q_career_level"
            style="@style/Text.Bold"
            android:layout_width="0dp"
            android:text="@string/q_career_level"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_username" />

        <TextView
            android:id="@+id/desc_career_level"
            style="@style/Text.Small"
            android:layout_width="0dp"
            android:text="@string/desc_career_level"
            app:layout_constraintStart_toStartOf="@+id/q_career_level"
            app:layout_constraintTop_toBottomOf="@id/q_career_level"
            app:layout_constraintEnd_toEndOf="@id/q_career_level"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_career_level"
            style="@style/CustomDropdown"
            app:layout_constraintEnd_toEndOf="@+id/desc_career_level"
            app:layout_constraintStart_toStartOf="@+id/desc_career_level"
            app:layout_constraintTop_toBottomOf="@id/desc_career_level">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_text_career"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textAppearance="@style/Text.Regular"
                app:simpleItems="@array/list_career_level" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/q_experiences"
            style="@style/Text.Bold"
            android:layout_width="0dp"
            android:text="@string/q_experiences"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_career_level" />

        <TextView
            android:id="@+id/desc_experiences"
            style="@style/Text.Small"
            android:layout_width="0dp"
            android:text="@string/desc_experiences"
            app:layout_constraintStart_toStartOf="@+id/q_experiences"
            app:layout_constraintTop_toBottomOf="@id/q_experiences"
            app:layout_constraintEnd_toEndOf="@id/q_experiences"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_experiences"
            style="@style/CustomClearTextField"
            app:layout_constraintEnd_toEndOf="@+id/desc_experiences"
            app:layout_constraintStart_toStartOf="@+id/desc_experiences"
            app:layout_constraintTop_toBottomOf="@id/desc_experiences">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_experiences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Text.Regular"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/q_employment_type"
            style="@style/Text.Bold"
            android:layout_width="0dp"
            android:text="@string/q_employment_type"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_experiences" />

        <TextView
            android:id="@+id/desc_employment_type"
            style="@style/Text.Small"
            android:layout_width="0dp"
            android:text="@string/desc_employment_type"
            app:layout_constraintStart_toStartOf="@+id/q_employment_type"
            app:layout_constraintTop_toBottomOf="@id/q_employment_type"
            app:layout_constraintEnd_toEndOf="@id/q_employment_type"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_employment_type"
            style="@style/CustomDropdown"
            app:layout_constraintEnd_toEndOf="@+id/desc_employment_type"
            app:layout_constraintStart_toStartOf="@+id/desc_employment_type"
            app:layout_constraintTop_toBottomOf="@id/desc_employment_type">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_text_employment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textAppearance="@style/Text.Regular"
                app:simpleItems="@array/list_employment_type"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/q_location"
            style="@style/Text.Bold"
            android:layout_width="0dp"
            android:text="@string/q_location"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_employment_type" />

        <TextView
            android:id="@+id/desc_location"
            style="@style/Text.Small"
            android:layout_width="0dp"
            android:text="@string/desc_location"
            app:layout_constraintStart_toStartOf="@+id/q_location"
            app:layout_constraintTop_toBottomOf="@id/q_location"
            app:layout_constraintEnd_toEndOf="@id/q_location"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_location"
            style="@style/CustomDropdown"
            app:layout_constraintEnd_toEndOf="@+id/desc_location"
            app:layout_constraintStart_toStartOf="@+id/desc_location"
            app:layout_constraintTop_toBottomOf="@id/desc_location">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_text_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textAppearance="@style/Text.Regular"
                app:simpleItems="@array/list_location"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/q_education"
            style="@style/Text.Bold"
            android:layout_width="0dp"
            android:text="@string/q_education"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_location" />

        <TextView
            android:id="@+id/desc_education"
            style="@style/Text.Small"
            android:layout_width="0dp"
            android:text="@string/desc_education"
            app:layout_constraintStart_toStartOf="@+id/q_education"
            app:layout_constraintTop_toBottomOf="@id/q_education"
            app:layout_constraintEnd_toEndOf="@id/q_education"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_education"
            style="@style/CustomDropdown"
            app:layout_constraintEnd_toEndOf="@+id/desc_education"
            app:layout_constraintStart_toStartOf="@+id/desc_education"
            app:layout_constraintTop_toBottomOf="@id/desc_education">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_text_education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textAppearance="@style/Text.Regular"
                app:simpleItems="@array/list_education"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            style="@style/RegularButton"
            android:text="@string/submit"
            android:layout_marginVertical="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_education" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_anim" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>