<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".ui.auth.register.RegisterFragment">

    <!-- Placeholder for App Logo -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="330dp"
            android:layout_height="130dp"
            android:contentDescription="@string/app_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/applogo" />

        <!-- Welcome Back Text 3 -->
        <TextView
            android:id="@+id/welcomeBackText3"
            style="@style/Text.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back3"
            android:gravity="center"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@id/appLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Welcome Back Text 4 -->
        <TextView
            android:id="@+id/welcomeBackText4"
            style="@style/Text.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back4"
            android:gravity="center"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/welcomeBackText3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Rounded Rectangle Background -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/backgroundCard"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/welcomeBackText4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            app:cardBackgroundColor="@color/tea_green">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <!-- LOGIN Title -->
                <TextView
                    android:id="@+id/reigsterTitle"
                    style="@style/Text.Medium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/text_register"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- Name Input Field -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameInputLayout"
                    style="@style/CustomTextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    app:startIconDrawable="@drawable/ic_person"
                    app:startIconTint="@color/dark_moss_green"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/reigsterTitle">

                    <com.incomeify.incomeifyapp.ui.customview.NamaEditText
                        android:id="@+id/nameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Email Input Field -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailInputLayout"
                    style="@style/CustomTextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    app:startIconDrawable="@drawable/ic_email"
                    app:startIconTint="@color/dark_moss_green"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nameInputLayout">

                    <com.incomeify.incomeifyapp.ui.customview.EmailEditText
                        android:id="@+id/emailInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Password Input Field -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordInputLayout"
                    style="@style/CustomTextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:startIconTint="@color/dark_moss_green"
                    app:endIconMode="password_toggle"
                    app:layout_constraintEnd_toEndOf="@id/emailInputLayout"
                    app:layout_constraintStart_toStartOf="@id/emailInputLayout"
                    app:layout_constraintTop_toBottomOf="@id/emailInputLayout">

                    <com.incomeify.incomeifyapp.ui.customview.PasswordEditText
                        android:id="@+id/passwordInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Confirm Password Input Field -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirmPasswordInputLayout"
                    style="@style/CustomTextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:startIconTint="@color/dark_moss_green"
                    app:endIconMode="password_toggle"
                    app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
                    app:layout_constraintStart_toStartOf="@id/emailInputLayout"
                    app:layout_constraintEnd_toEndOf="@id/emailInputLayout">

                    <com.incomeify.incomeifyapp.ui.customview.PasswordEditText
                        android:id="@+id/confirmPasswordInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Register Button -->
                <Button
                    android:id="@+id/registerButton"
                    style="@style/Text.Bold"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/may_green"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:text="@string/register"
                    app:layout_constraintEnd_toEndOf="@id/passwordInputLayout"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/passwordInputLayout"
                    app:layout_constraintTop_toBottomOf="@id/confirmPasswordInputLayout" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <!-- Register Text -->
        <TextView
            android:id="@+id/loginText"
            style="@style/Text.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="32dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backgroundCard" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
